--- a/Djamila.html
+++ b/Djamila.html
@@ -78,7 +78,7 @@
 
 </header>
     <div class="container">
-    <img src="TO.png" alt="Tô Dish">
+    <img src="image2/to.jpg" alt="Tô Dish">
 
     <h2>About the Dish - Tô</h2>
     <p>
