--- a/Group-Project-2300 updated/Jaali.html
+++ b/Group-Project-2300 updated/Jaali.html
@@ -7,6 +7,46 @@
   <title> Egg Fried Rice </title>
   <style>
 
+.neonav {
+  background: rgb(224, 70, 28);
+  box-shadow: inset 6px 6px 12px #f27e64, inset -6px -6px 12px #e63b3b;
+  padding: 1rem 2rem;
+  display: flex;
+  justify-content: center;
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+}
+
+.neonav ul {
+  list-style: none;
+  display: flex;
+  gap: 1rem;
+  flex-wrap: wrap;
+  margin: 0;
+  padding: 0;
+}
+
+.neonav li {
+  display: inline;
+}
+
+.neonav a {
+  text-decoration: none;
+  color: #333;
+  background:  #ebeeae;
+  padding: 0.6rem 1.2rem;
+  border-radius: 12px;
+  box-shadow: 4px 4px 8px #b8c6db, -4px -4px 8px #ffffff;
+  transition: all 0.3s ease;
+  transition: all 0.3s ease;
+  font-weight: 500;
+}
+
+.neonav a:hover {
+  box-shadow: inset 3px 3px 6px #b8c6db, inset -3px -3px 6px #ffffff;
+  color: #000;
+}
 .video-container {
   position: relative;
   padding-bottom: 56.25%; /* 16:9 aspect ratio */
@@ -87,6 +127,20 @@
   </style>
 </head>
 <body>
+
+ <nav class="neonav">
+        <ul>
+          <li><a href="Apofiah.html">Apofiah</a></li>
+          <li><a href="Darianne.html">Darianne</a></li>
+          <li><a href="Djamila.html">Djamila</a></li>
+          <li><a href="India.html">India</a></li>
+          <li><a href="Jaali.html">Jaali</a></li>
+          <li><a href="Aboubacar.html">Aboubacar</a></li>
+          <li><a href="Tiryn.html">Tiryn</a></li>
+          <li><a href="DeCamre.html">DeCamre</a></li>
+        </ul>
+      </nav>
+
   <div class="parallax">
     <h1> 蛋炒饭 (dàn chǎo fàn) </h1>
   </div>
